MAT-15948, refaktorering mm